--- a/bindings/python/pyproject.toml
+++ b/bindings/python/pyproject.toml
@@ -34,8 +34,8 @@ wheel.py-api = "cp312"
 build-verbosity = 1
 
 # Run pytest to ensure that the package was correctly built
-test-command = "pytest {project}/tests"
-test-requires = "pytest"
+test-command = "python unittest discover {project}/tests"
+#test-requires = "pytest"
 
 # Don't test Python 3.8 wheels on macOS/arm64
 test-skip="cp38-macosx_*:arm64"
