Work on getting CI build for Python working

--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -16,7 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         #platform: [windows-latest, macos-latest, ubuntu-latest]
-        platform: [macos-latest, ubuntu-latest]
+        #platform: [macos-latest, ubuntu-latest]
+        platform: [ubuntu-latest]
         python-version: ["3.8", "3.12"]
 
     steps:
