--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -66,7 +66,12 @@ jobs:
     name: Upload if release
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' && github.event.action == 'published'
+    environment:
+      name: pypi
+      url: https://pypi.org/p/SandiaSpecUtils
+    permissions:
+      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+    #if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
     - uses: actions/setup-python@v5
