--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -39,9 +39,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        #os: [ubuntu-latest, macos-13, macos-14, windows-latest]
-        #os: [ubuntu-latest, macos-latest]
-        os: [ubuntu-latest]
+        #os: [ubuntu-latest, macos-13, macos-14, macos-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v4
