--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -16,7 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         platform: [windows-latest, macos-latest, ubuntu-latest]
-        python-version: ["3.9", "3.12"]
+        #python-version: ["3.9", "3.12"]
+        python-version: ["3.12"]
 
     steps:
     - uses: actions/checkout@v4
