--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -40,7 +40,8 @@ jobs:
       fail-fast: false
       matrix:
         #os: [ubuntu-latest, macos-13, macos-14, macos-latest, windows-latest]
-        os: [ubuntu-latest, windows-latest]
+        #os: [ubuntu-latest, windows-latest]
+        os: [macos-latest]
 
     steps:
     - uses: actions/checkout@v4
