--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -49,8 +49,8 @@ jobs:
         submodules: true
 
     - uses: pypa/cibuildwheel@v2.22
-      env: 
-        CIBW_ARCHS_MACOS: "x86_64 universal2 arm64"
+      env:
+        CIBW_ARCHS_MACOS: "universal2"
       with:
         package-dir: ./bindings/python
 
