--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -41,7 +41,7 @@ jobs:
       matrix:
         #os: [ubuntu-latest, macos-13, macos-14, macos-latest, windows-latest]
         #os: [ubuntu-latest, windows-latest]
-        os: [macos-14, macos-latest]
+        os: [macos-13, macos-14, macos-latest]
 
     steps:
     - uses: actions/checkout@v4
