--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -39,9 +39,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        #os: [ubuntu-latest, macos-13, macos-14, macos-latest, windows-latest]
-        #os: [ubuntu-latest, windows-latest]
-        os: [macos-13, macos-14, macos-latest]
+        os: [ubuntu-latest, macos-13, macos-14, macos-latest, macos-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v4
@@ -73,7 +71,7 @@ jobs:
       url: https://pypi.org/p/SandiaSpecUtils
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
-    if: github.event_name == 'release' && github.event.action == 'published'
+    #if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
     - uses: actions/setup-python@v5
