--- a/SpecUtils/SpecUtils_config.h.in
+++ b/SpecUtils/SpecUtils_config.h.in
@@ -73,6 +73,6 @@
 void log_developer_error( const char *location, const char *error );
 #endif
 
-#include "SpecUtilsExport.h"
+//#include "SpecUtilsExport.h"
 
 #endif // InterSpec_config_h
