Make some small changes to @balamuruganky pull request.
CHanged node install directory to be within the build directory.
Modified the D3 plotting HTML examples to behave a bit better (re-size with window).
Removed linux build script, and coorespondingly change CMakeLists.txt for building the node bindings a bit, so hopefully it isnt necassary.

--- a/bindings/node/CMakeLists.txt
+++ b/bindings/node/CMakeLists.txt
@@ -1,17 +1,16 @@
 cmake_policy(SET CMP0048 NEW)
 project( SpecUtilsJS )
 
+# npm install -g cmake-js 
 # npm install --save-dev node-addon-api
-# cmake-js --CDBOOST_ROOT=/path/to/boost --CDCMAKE_BUILD_TYPE="Release"
+# cmake-js --CDSpecUtils_FLT_PARSE_METHOD="strtod" --CDCMAKE_BUILD_TYPE="Release"
 # cmake-js build --target install
 
 cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
 
 set( CMAKE_CXX_STANDARD 11 )
 set( CMAKE_CXX_STANDARD_REQUIRED ON )
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-
-set( TRY_TO_STATIC_LINK ON CACHE BOOL "Lets statically link everything" )
+set( CMAKE_POSITION_INDEPENDENT_CODE ON )
 
 IF(WIN32)
   set( MSVC_RUNTIME "static" )
@@ -21,9 +20,8 @@ IF(WIN32)
     #0x0601==Win7, 0x0501==WinXP
 ENDIF(WIN32)
 
-IF(UNIX)
-  include_directories (./linux_build)
-ENDIF(UNIX)
+
+include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
 add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/../.. ${CMAKE_CURRENT_BINARY_DIR}/LibSpecUtils )
 
 include_directories(${CMAKE_JS_INC})
@@ -38,8 +36,8 @@ target_include_directories( ${PROJECT_NAME} PUBLIC
 )
 
 
-install( FILES ${CMAKE_CURRENT_SOURCE_DIR}/example.js DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/node_release/ )
-install( TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/node_release/ )
+install( FILES ${CMAKE_CURRENT_SOURCE_DIR}/example.js DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/node_release/ )
+install( TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/node_release/ )
 
 
 
