--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -39,7 +39,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-13, macos-14, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-14, macos-15, macos-26, windows-latest]
 
     steps:
     - uses: actions/checkout@v4
