--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -30,7 +30,7 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: dist-sdist
-        path: dist/*.tar.gz
+        path: bindings/python/dist/*.tar.gz
 
 
   build_wheels:
@@ -39,16 +39,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-14, macos-15, macos-26, windows-latest]
+        os: [ubuntu-latest, macos-14, windows-latest]
 
     steps:
     - uses: actions/checkout@v4
       with:
         submodules: true
 
-    - uses: pypa/cibuildwheel@v2.22
+    - uses: pypa/cibuildwheel@v3
       env:
         CIBW_ARCHS_MACOS: "universal2"
+        CIBW_ENABLE: "pypy"
       with:
         package-dir: ./bindings/python
 
@@ -62,6 +63,30 @@ jobs:
         path: wheelhouse/*.whl
         name: dist-${{ matrix.os }}
 
+  test_newer_macos:
+    name: Test wheels on ${{ matrix.os }} (no publish)
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-15, macos-26]
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: true
+
+    - uses: pypa/cibuildwheel@v3
+      env:
+        CIBW_ARCHS_MACOS: "universal2"
+        CIBW_ENABLE: "pypy"
+      with:
+        package-dir: ./bindings/python
+
+    - name: Verify clean directory
+      run: git diff --exit-code
+      shell: bash
+
   upload_all:
     name: Upload if release
     needs: [build_wheels, build_sdist]
@@ -71,7 +96,7 @@ jobs:
       url: https://pypi.org/p/SandiaSpecUtils
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
-    #if: github.event_name == 'release' && github.event.action == 'published'
+    if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
     - uses: actions/setup-python@v5
@@ -79,6 +104,7 @@ jobs:
       with:
         pattern: dist-*
         merge-multiple: true
+        path: dist
     - shell: bash
       run: |
         pwd
@@ -86,6 +112,4 @@ jobs:
 
     - uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        packages-dir: /home/runner/work/SpecUtils/SpecUtils
-        user: __token__
-        password: ${{ secrets.pypi_password }}
+        packages-dir: dist
